--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@astrojs/netlify": "^5.5.3",
     "@astrojs/node": "^8.3.4",
     "@astrojs/react": "^3.6.2",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@phosphor-icons/react": "^2.1.7",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
