--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "recogito-client",
   "type": "module",
-  "version": "1.0.0.beta.6",
+  "version": "1.2.0",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
