--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "formik": "2.4.6",
     "linkedom": "0.18.5",
     "moment": "^2.30.1",
+    "nanoid": "^5.0.9",
     "nodemailer": "^6.9.16",
     "openseadragon": "4.0.0",
     "papaparse": "5.4.1",
