--- a/package.json
+++ b/package.json
@@ -99,5 +99,8 @@
     "eslint": "^9.15.0",
     "eslint-plugin-react": "^7.37.2",
     "typescript": "5.6.3"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.29.1"
   }
 }
