--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "typescript": "5.6.3"
   },
   "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "4.29.1"
+    "@rollup/rollup-linux-x64-gnu": "4.29.1",
+    "esbuild": "0.21.5"
   }
 }
