--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@radix-ui/react-visually-hidden": "^1.1.0",
+    "@radix-ui/themes": "^3.1.6",
     "@react-spring/web": "^9.7.5",
     "@recogito/annotorious-supabase": "^1.1.0",
     "@recogito/pdf-annotator": "1.0.0-rc.41",
@@ -98,5 +99,9 @@
     "eslint": "^9.15.0",
     "eslint-plugin-react": "^7.37.2",
     "typescript": "5.6.3"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.29.1",
+    "@esbuild/linux-x64": "0.21.5"
   }
 }
