--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     "@react-spring/web": "^9.7.5",
     "@recogito/annotorious-supabase": "^1.1.0",
     "@recogito/pdf-annotator": "1.0.0-rc.41",
+    "@recogito/plugin-reconciliation-service": "github:recogito/plugin-reconciliation-service",
     "@recogito/react-pdf-annotator": "1.0.0-rc.41",
     "@recogito/react-text-annotator": "3.0.0-rc.54",
+    "@recogito/studio-sdk": "^0.1.3",
     "@supabase/ssr": "0.5.2",
     "@supabase/supabase-js": "2.46.1",
     "@table-library/react-table-library": "^4.1.7",
@@ -101,7 +103,7 @@
     "typescript": "5.6.3"
   },
   "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "4.29.1",
-    "@esbuild/linux-x64": "0.21.5"
+    "@esbuild/linux-x64": "0.21.5",
+    "@rollup/rollup-linux-x64-gnu": "4.29.1"
   }
 }
