--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@react-spring/web": "^9.7.5",
     "@recogito/annotorious-supabase": "^1.1.0",
     "@recogito/pdf-annotator": "1.0.0-rc.41",
+    "@recogito/plugin-duke-unreal-export": "github:recogito/plugin-duke-unreal-export",
     "@recogito/plugin-reconciliation-service": "github:recogito/plugin-reconciliation-service",
     "@recogito/react-pdf-annotator": "1.0.0-rc.41",
     "@recogito/react-text-annotator": "3.0.0-rc.54",
