--- a/package.json
+++ b/package.json
@@ -43,9 +43,10 @@
     "@radix-ui/themes": "^3.2.1",
     "@react-spring/web": "^9.7.5",
     "@recogito/annotorious-supabase": "^1.2.0",
-    "@recogito/pdf-annotator": "1.0.0-rc.42",
-    "@recogito/react-pdf-annotator": "1.0.0-rc.42",
-    "@recogito/react-text-annotator": "file:../text-annotator/packages/text-annotator-react",
+    "@recogito/pdf-annotator": "^1.0.0",
+    "@recogito/plugin-geotagging": "file:../geotagger",
+    "@recogito/react-pdf-annotator": "^1.0.0",
+    "@recogito/react-text-annotator": "3.0.0",
     "@recogito/studio-sdk": "^0.4.0",
     "@supabase/ssr": "0.6.1",
     "@supabase/supabase-js": "2.49.4",
@@ -55,7 +56,7 @@
     "@usewaypoint/email-builder": "^0.0.8",
     "accept-language-parser": "^1.5.0",
     "annotpdf": "^1.0.15",
-    "astro": "^5.5.6",
+    "astro": "^5.6.0",
     "classnames": "^2.5.1",
     "confetti-explosion-react": "^0.1.2",
     "crypto-js": "4.2.0",
