--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@allmaps/iiif-parser": "1.0.0-beta.40",
+    "@annotorious/annotorious": "3.3.3",
     "@annotorious/react": "3.3.3",
     "@astrojs/netlify": "^6.2.5",
     "@astrojs/node": "^9.1.3",
