--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     "@recogito/annotorious-supabase": "^1.2.0",
     "@recogito/pdf-annotator": "^1.0.0",
     "@recogito/react-pdf-annotator": "^1.0.0",
-    "@recogito/react-text-annotator": "3.0.0",
+    "@recogito/react-text-annotator": "file:../text-annotator/packages/text-annotator-react",
     "@recogito/studio-sdk": "^0.4.1",
+    "@recogito/text-annotator": "file:../text-annotator/packages/text-annotator",
+    "@recogito/text-annotator-tei": "file:../text-annotator/packages/extension-tei",
     "@supabase/ssr": "0.6.1",
     "@supabase/supabase-js": "2.49.4",
     "@table-library/react-table-library": "^4.1.12",
