--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@radix-ui/react-visually-hidden": "^1.1.2",
     "@radix-ui/themes": "^3.2.1",
     "@react-spring/web": "^9.7.5",
-    "@recogito/annotorious-supabase": "^1.2.0",
+    "@recogito/annotorious-supabase": "file:../annotorious-supabase",
     "@recogito/pdf-annotator": "^1.0.1",
     "@recogito/react-pdf-annotator": "^1.0.1",
     "@recogito/react-text-annotator": "^3.0.1",
