--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.5.0",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
+    "start": "astro dev --host",
     "build": "NODE_OPTIONS=--max_old_space_size=4096 && astro build",
     "build-node": "NODE_OPTIONS=--max_old_space_size=4096 && astro build --config astro.config.node.mjs",
     "preview-node": "node --max-old-space-size=4096 ./dist/server/entry.mjs",
@@ -44,12 +44,12 @@
     "@radix-ui/themes": "^3.2.1",
     "@react-spring/web": "^9.7.5",
     "@recogito/annotorious-supabase": "^1.3.1",
-    "@recogito/pdf-annotator": "^1.0.1",
-    "@recogito/react-pdf-annotator": "^1.0.1",
-    "@recogito/react-text-annotator": "^3.0.1",
+    "@recogito/pdf-annotator": "^1.0.2",
+    "@recogito/react-pdf-annotator": "^1.0.2",
+    "@recogito/react-text-annotator": "^3.0.2",
     "@recogito/studio-sdk": "^0.4.2",
-    "@recogito/text-annotator": "^3.0.1",
-    "@recogito/text-annotator-tei": "^3.0.1",
+    "@recogito/text-annotator": "^3.0.2",
+    "@recogito/text-annotator-tei": "^3.0.2",
     "@supabase/ssr": "0.6.1",
     "@supabase/supabase-js": "2.49.4",
     "@table-library/react-table-library": "^4.1.15",
