--- a/package.json
+++ b/package.json
@@ -13,43 +13,43 @@
   },
   "dependencies": {
     "@allmaps/iiif-parser": "1.0.0-beta.42",
-    "@annotorious/annotorious": "^3.3.4",
-    "@annotorious/react": "^3.3.4",
-    "@astrojs/netlify": "^6.3.0",
-    "@astrojs/node": "^9.2.0",
-    "@astrojs/react": "^4.2.4",
+    "@annotorious/annotorious": "^3.3.6",
+    "@annotorious/react": "^3.3.6",
+    "@astrojs/netlify": "^6.3.1",
+    "@astrojs/node": "^9.2.1",
+    "@astrojs/react": "^4.2.5",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@phosphor-icons/react": "^2.1.7",
-    "@radix-ui/react-accordion": "^1.2.7",
-    "@radix-ui/react-alert-dialog": "^1.1.10",
-    "@radix-ui/react-avatar": "^1.1.6",
-    "@radix-ui/react-checkbox": "^1.2.2",
-    "@radix-ui/react-dialog": "^1.1.10",
-    "@radix-ui/react-dropdown-menu": "^2.1.11",
+    "@radix-ui/react-accordion": "^1.2.8",
+    "@radix-ui/react-alert-dialog": "^1.1.11",
+    "@radix-ui/react-avatar": "^1.1.7",
+    "@radix-ui/react-checkbox": "^1.2.3",
+    "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-label": "^2.1.4",
-    "@radix-ui/react-popover": "^1.1.10",
+    "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-progress": "^1.1.4",
-    "@radix-ui/react-radio-group": "^1.3.3",
-    "@radix-ui/react-scroll-area": "^1.2.5",
+    "@radix-ui/react-radio-group": "^1.3.4",
+    "@radix-ui/react-scroll-area": "^1.2.6",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-switch": "^1.2.2",
-    "@radix-ui/react-tabs": "^1.1.8",
-    "@radix-ui/react-toast": "^1.2.10",
+    "@radix-ui/react-tabs": "^1.1.9",
+    "@radix-ui/react-toast": "^1.2.11",
     "@radix-ui/react-toggle": "^1.1.6",
     "@radix-ui/react-toggle-group": "^1.1.7",
-    "@radix-ui/react-tooltip": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.4",
     "@radix-ui/react-visually-hidden": "^1.2.0",
     "@radix-ui/themes": "^3.2.1",
     "@react-spring/web": "^9.7.5",
-    "@recogito/annotorious-supabase": "file:../annotorious-supabase",
-    "@recogito/pdf-annotator": "^1.0.1",
-    "@recogito/react-pdf-annotator": "^1.0.1",
-    "@recogito/react-text-annotator": "^3.0.1",
+    "@recogito/annotorious-supabase": "1.3.2",
+    "@recogito/pdf-annotator": "^1.0.2",
+    "@recogito/react-pdf-annotator": "^1.0.2",
+    "@recogito/react-text-annotator": "^3.0.2",
     "@recogito/studio-sdk": "^0.5.1",
-    "@recogito/text-annotator": "^3.0.1",
-    "@recogito/text-annotator-tei": "^3.0.1",
+    "@recogito/text-annotator": "^3.0.2",
+    "@recogito/text-annotator-tei": "^3.0.2",
     "@supabase/ssr": "0.6.1",
     "@supabase/supabase-js": "2.49.4",
     "@table-library/react-table-library": "^4.1.15",
@@ -58,14 +58,14 @@
     "@usewaypoint/email-builder": "^0.0.8",
     "accept-language-parser": "^1.5.0",
     "annotpdf": "^1.0.15",
-    "astro": "^5.7.4",
+    "astro": "^5.7.6",
     "classnames": "^2.5.1",
     "confetti-explosion-react": "^0.1.2",
     "cozy-iiif": "^0.2.2",
     "crypto-js": "4.2.0",
     "date-fns": "^4.1.0",
     "formik": "2.4.6",
-    "linkedom": "0.18.9",
+    "linkedom": "0.18.10",
     "moment": "^2.30.1",
     "nanoid": "^5.1.5",
     "nodemailer": "^6.10.1",
@@ -91,7 +91,7 @@
     "@types/accept-language-parser": "^1.5.7",
     "@types/crypto-js": "4.2.2",
     "@types/nodemailer": "^6.4.17",
-    "@types/openseadragon": "3.0.10",
+    "@types/openseadragon": "4.1.0",
     "@types/papaparse": "5.3.15",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
@@ -104,7 +104,7 @@
     "typescript": "5.8.3"
   },
   "optionalDependencies": {
-    "@esbuild/linux-x64": "0.25.2",
-    "@rollup/rollup-linux-x64-gnu": "4.40.0"
+    "@esbuild/linux-x64": "0.25.3",
+    "@rollup/rollup-linux-x64-gnu": "4.40.1"
   }
 }
