--- a/package.json
+++ b/package.json
@@ -45,9 +45,10 @@
     "@react-spring/web": "^9.7.5",
     "@recogito/annotorious-supabase": "1.3.2",
     "@recogito/pdf-annotator": "^1.0.2",
+    "@recogito/plugin-revisions": "file:../plugin-revisions",
     "@recogito/react-pdf-annotator": "^1.0.2",
     "@recogito/react-text-annotator": "^3.0.2",
-    "@recogito/studio-sdk": "^0.5.1",
+    "@recogito/studio-sdk": "file:../recogito-studio-sdk",
     "@recogito/text-annotator": "^3.0.2",
     "@recogito/text-annotator-tei": "^3.0.2",
     "@supabase/ssr": "0.6.1",
