--- a/package.json
+++ b/package.json
@@ -22,25 +22,25 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@phosphor-icons/react": "^2.1.7",
-    "@radix-ui/react-accordion": "^1.2.8",
-    "@radix-ui/react-alert-dialog": "^1.1.11",
-    "@radix-ui/react-avatar": "^1.1.7",
-    "@radix-ui/react-checkbox": "^1.2.3",
-    "@radix-ui/react-dialog": "^1.1.11",
-    "@radix-ui/react-dropdown-menu": "^2.1.12",
-    "@radix-ui/react-label": "^2.1.4",
-    "@radix-ui/react-popover": "^1.1.11",
-    "@radix-ui/react-progress": "^1.1.4",
-    "@radix-ui/react-radio-group": "^1.3.4",
-    "@radix-ui/react-scroll-area": "^1.2.6",
-    "@radix-ui/react-select": "^2.2.2",
-    "@radix-ui/react-switch": "^1.2.2",
-    "@radix-ui/react-tabs": "^1.1.9",
-    "@radix-ui/react-toast": "^1.2.11",
-    "@radix-ui/react-toggle": "^1.1.6",
-    "@radix-ui/react-toggle-group": "^1.1.7",
-    "@radix-ui/react-tooltip": "^1.2.4",
-    "@radix-ui/react-visually-hidden": "^1.2.0",
+    "@radix-ui/react-accordion": "^1.2.10",
+    "@radix-ui/react-alert-dialog": "^1.1.13",
+    "@radix-ui/react-avatar": "^1.1.9",
+    "@radix-ui/react-checkbox": "^1.3.1",
+    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-dropdown-menu": "^2.1.14",
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-popover": "^1.1.13",
+    "@radix-ui/react-progress": "^1.1.6",
+    "@radix-ui/react-radio-group": "^1.3.6",
+    "@radix-ui/react-scroll-area": "^1.2.8",
+    "@radix-ui/react-select": "^2.2.4",
+    "@radix-ui/react-switch": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.11",
+    "@radix-ui/react-toast": "^1.2.13",
+    "@radix-ui/react-toggle": "^1.1.8",
+    "@radix-ui/react-toggle-group": "^1.1.9",
+    "@radix-ui/react-tooltip": "^1.2.6",
+    "@radix-ui/react-visually-hidden": "^1.2.2",
     "@radix-ui/themes": "^3.2.1",
     "@react-spring/web": "^9.7.5",
     "@recogito/annotorious-supabase": "1.3.2",
@@ -49,7 +49,7 @@
     "@recogito/plugin-revisions": "file:../plugin-revisions",
     "@recogito/react-pdf-annotator": "^1.0.2",
     "@recogito/react-text-annotator": "^3.0.2",
-    "@recogito/studio-sdk": "^0.6.0",
+    "@recogito/studio-sdk": "^0.6.1",
     "@recogito/text-annotator": "^3.0.2",
     "@recogito/text-annotator-tei": "^3.0.2",
     "@supabase/ssr": "0.6.1",
@@ -79,7 +79,7 @@
     "react-contenteditable": "^3.3.7",
     "react-dom": "^18.3.1",
     "react-dropzone": "14.3.8",
-    "react-error-boundary": "^5.0.0",
+    "react-error-boundary": "^6.0.0",
     "react-textarea-autosize": "8.5.9",
     "react-virtualized-auto-sizer": "1.0.26",
     "react-window": "1.8.11",
@@ -90,23 +90,23 @@
   },
   "devDependencies": {
     "@astrojs/ts-plugin": "^1.10.4",
-    "@types/accept-language-parser": "^1.5.7",
+    "@types/accept-language-parser": "^1.5.8",
     "@types/crypto-js": "4.2.2",
     "@types/nodemailer": "^6.4.17",
     "@types/openseadragon": "4.1.0",
     "@types/papaparse": "5.3.15",
-    "@types/react": "^18.3.20",
+    "@types/react": "^18.3.21",
     "@types/react-dom": "^18.3.7",
     "@types/react-window": "1.8.8",
     "@types/uuid": "10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.31.1",
-    "@typescript-eslint/parser": "^8.31.1",
-    "eslint": "^9.25.1",
+    "@typescript-eslint/eslint-plugin": "^8.32.0",
+    "@typescript-eslint/parser": "^8.32.0",
+    "eslint": "^9.26.0",
     "eslint-plugin-react": "^7.37.5",
     "typescript": "5.8.3"
   },
   "optionalDependencies": {
-    "@esbuild/linux-x64": "0.25.3",
-    "@rollup/rollup-linux-x64-gnu": "4.40.1"
+    "@esbuild/linux-x64": "^0.25.4",
+    "@rollup/rollup-linux-x64-gnu": "^4.40.2"
   }
 }
