--- a/package.json
+++ b/package.json
@@ -22,36 +22,36 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@phosphor-icons/react": "2.1.7",
-    "@radix-ui/react-accordion": "^1.2.10",
-    "@radix-ui/react-alert-dialog": "^1.1.13",
-    "@radix-ui/react-avatar": "^1.1.9",
-    "@radix-ui/react-checkbox": "^1.3.1",
-    "@radix-ui/react-dialog": "^1.1.13",
-    "@radix-ui/react-dropdown-menu": "^2.1.14",
-    "@radix-ui/react-label": "^2.1.6",
-    "@radix-ui/react-popover": "^1.1.13",
-    "@radix-ui/react-progress": "^1.1.6",
-    "@radix-ui/react-radio-group": "^1.3.6",
-    "@radix-ui/react-scroll-area": "^1.2.8",
-    "@radix-ui/react-select": "^2.2.4",
-    "@radix-ui/react-switch": "^1.2.4",
-    "@radix-ui/react-tabs": "^1.1.11",
-    "@radix-ui/react-toast": "^1.2.13",
-    "@radix-ui/react-toggle": "^1.1.8",
-    "@radix-ui/react-toggle-group": "^1.1.9",
-    "@radix-ui/react-tooltip": "^1.2.6",
-    "@radix-ui/react-visually-hidden": "^1.2.2",
+    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-radio-group": "^1.3.7",
+    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toast": "^1.2.14",
+    "@radix-ui/react-toggle": "^1.1.9",
+    "@radix-ui/react-toggle-group": "^1.1.10",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@radix-ui/react-visually-hidden": "^1.2.3",
     "@radix-ui/themes": "^3.2.1",
     "@react-spring/web": "^10.0.0",
     "@recogito/annotorious-supabase": "1.3.2",
     "@recogito/pdf-annotator": "^1.0.3",
     "@recogito/react-pdf-annotator": "^1.0.3",
     "@recogito/react-text-annotator": "^3.0.4",
-    "@recogito/studio-sdk": "^0.6.4",
+    "@recogito/studio-sdk": "^0.6.6",
     "@recogito/text-annotator": "^3.0.4",
     "@recogito/text-annotator-tei": "^3.0.4",
     "@supabase/ssr": "0.6.1",
-    "@supabase/supabase-js": "2.49.4",
+    "@supabase/supabase-js": "^2.49.4",
     "@table-library/react-table-library": "^4.1.15",
     "@uppy/core": "4.4.5",
     "@uppy/xhr-upload": "4.3.3",
@@ -70,7 +70,7 @@
     "nanoid": "^5.1.5",
     "nodemailer": "^6.10.1",
     "openseadragon": "5.0.1",
-    "papaparse": "5.5.2",
+    "papaparse": "5.5.3",
     "quill": "2.0.3",
     "quill-delta-to-html": "^0.12.1",
     "react": "^18.3.1",
