--- a/package.json
+++ b/package.json
@@ -12,37 +12,37 @@
     "postinstall": "node copy-pdf-worker.js"
   },
   "dependencies": {
-    "@allmaps/iiif-parser": "1.0.0-beta.42",
-    "@annotorious/annotorious": "^3.3.6",
-    "@annotorious/react": "^3.3.6",
-    "@astrojs/netlify": "^6.3.4",
-    "@astrojs/node": "^9.2.2",
-    "@astrojs/react": "^4.2.7",
+    "@allmaps/iiif-parser": "^1.0.0-beta.45",
+    "@annotorious/annotorious": "^3.7.7",
+    "@annotorious/react": "^3.7.7",
+    "@astrojs/netlify": "^6.5.11",
+    "@astrojs/node": "^9.4.4",
+    "@astrojs/react": "^4.4.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@phosphor-icons/react": "2.1.7",
-    "@radix-ui/react-accordion": "^1.2.11",
-    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@phosphor-icons/react": "2.1.10",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-checkbox": "^1.3.2",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.7",
-    "@radix-ui/react-radio-group": "^1.3.7",
-    "@radix-ui/react-scroll-area": "^1.2.9",
-    "@radix-ui/react-select": "^2.2.5",
-    "@radix-ui/react-switch": "^1.2.5",
-    "@radix-ui/react-tabs": "^1.1.12",
-    "@radix-ui/react-toast": "^1.2.14",
-    "@radix-ui/react-toggle": "^1.1.9",
-    "@radix-ui/react-toggle-group": "^1.1.10",
-    "@radix-ui/react-tooltip": "^1.2.7",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-toggle": "^1.1.10",
+    "@radix-ui/react-toggle-group": "^1.1.11",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-visually-hidden": "^1.2.3",
     "@radix-ui/themes": "^3.2.1",
-    "@react-spring/web": "^10.0.1",
+    "@react-spring/web": "^9.7.5",
     "@recogito/annotorious-supabase": "1.3.2",
     "@recogito/pdf-annotator": "^1.0.3",
     "@recogito/react-pdf-annotator": "^1.0.3",
@@ -65,7 +65,7 @@
     "crypto-js": "4.2.0",
     "date-fns": "^4.1.0",
     "formik": "2.4.6",
-    "linkedom": "0.18.10",
+    "linkedom": "0.18.12",
     "moment": "^2.30.1",
     "nanoid": "^5.1.5",
     "nodemailer": "^6.10.1",
@@ -84,7 +84,7 @@
     "sanitize-filename": "^1.6.3",
     "slugify": "^1.6.6",
     "timeago-react": "3.0.7",
-    "uuid": "11.1.0"
+    "uuid": "13.0.0"
   },
   "devDependencies": {
     "@astrojs/ts-plugin": "^1.10.4",
@@ -96,7 +96,6 @@
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@types/react-window": "1.8.8",
-    "@types/uuid": "10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
     "eslint": "^9.27.0",
