--- a/package.json
+++ b/package.json
@@ -79,8 +79,7 @@
     "react-dropzone": "14.3.8",
     "react-error-boundary": "^6.0.0",
     "react-textarea-autosize": "8.5.9",
-    "react-virtualized-auto-sizer": "1.0.26",
-    "react-window": "1.8.11",
+    "react-window": "^2.1.2",
     "sanitize-filename": "^1.6.3",
     "slugify": "^1.6.6",
     "timeago-react": "3.0.7",
