--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@recogito/pdf-annotator": "^1.0.3",
     "@recogito/react-pdf-annotator": "^1.0.3",
     "@recogito/react-text-annotator": "^3.0.5",
-    "@recogito/studio-sdk": "^0.6.7",
+    "@recogito/studio-sdk": "0.7.1",
     "@recogito/text-annotator": "^3.0.5",
     "@recogito/text-annotator-tei": "^3.0.5",
     "@supabase/ssr": "0.6.1",
