--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "@typescript-eslint/parser": "^8.32.1",
     "eslint": "^9.27.0",
     "eslint-plugin-react": "^7.37.5",
-    "typescript": "5.8.3"
+    "typescript": "^5.9.2"
   },
   "optionalDependencies": {
     "@esbuild/linux-x64": "^0.25.5",
