--- a/package.json
+++ b/package.json
@@ -42,10 +42,10 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-visually-hidden": "^1.2.3",
     "@radix-ui/themes": "^3.2.1",
-    "@react-spring/web": "^9.7.5",
+    "@react-spring/web": "^10.0.3",
     "@recogito/annotorious-supabase": "1.3.2",
-    "@recogito/pdf-annotator": "^1.2.0",
-    "@recogito/react-pdf-annotator": "^1.2.0",
+    "@recogito/pdf-annotator": "^1.3.0",
+    "@recogito/react-pdf-annotator": "^1.3.0",
     "@recogito/react-text-annotator": "^3.2.0",
     "@recogito/studio-sdk": "^0.7.1",
     "@recogito/text-annotator": "^3.2.0",
@@ -58,7 +58,7 @@
     "@usewaypoint/email-builder": "^0.0.8",
     "accept-language-parser": "^1.5.0",
     "annotpdf": "^1.0.15",
-    "astro": "^5.7.13",
+    "astro": "^5.14.1",
     "classnames": "^2.5.1",
     "confetti-explosion-react": "^0.1.2",
     "cozy-iiif": "^0.5.1",
@@ -67,15 +67,15 @@
     "formik": "2.4.6",
     "linkedom": "0.18.12",
     "moment": "^2.30.1",
-    "nanoid": "^5.1.5",
+    "nanoid": "^5.1.6",
     "nodemailer": "^6.10.1",
     "openseadragon": "5.0.1",
     "papaparse": "5.5.3",
     "quill": "2.0.3",
     "quill-delta-to-html": "^0.12.1",
-    "react": "^18.3.1",
+    "react": "^19.1.1",
     "react-contenteditable": "^3.3.7",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.1.1",
     "react-dropzone": "14.3.8",
     "react-error-boundary": "^6.0.0",
     "react-textarea-autosize": "8.5.9",
@@ -92,9 +92,9 @@
     "@types/nodemailer": "^6.4.17",
     "@types/openseadragon": "4.1.0",
     "@types/papaparse": "5.3.16",
-    "@types/react": "^18.3.23",
-    "@types/react-dom": "^18.3.7",
-    "@types/react-window": "1.8.8",
+    "@types/react": "^19.1.16",
+    "@types/react-dom": "^19.1.9",
+    "@types/react-window": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
     "eslint": "^9.27.0",
@@ -102,7 +102,7 @@
     "typescript": "^5.9.2"
   },
   "optionalDependencies": {
-    "@esbuild/linux-x64": "^0.25.5",
-    "@rollup/rollup-linux-x64-gnu": "^4.41.1"
+    "@esbuild/linux-x64": "^0.25.10",
+    "@rollup/rollup-linux-x64-gnu": "^4.52.3"
   }
 }
