--- a/package.json
+++ b/package.json
@@ -87,6 +87,8 @@
   },
   "devDependencies": {
     "@astrojs/ts-plugin": "^1.10.4",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.36.0",
     "@types/accept-language-parser": "^1.5.8",
     "@types/crypto-js": "4.2.2",
     "@types/nodemailer": "^7.0.2",
@@ -98,6 +100,7 @@
     "@typescript-eslint/parser": "^8.45.0",
     "eslint": "^9.36.0",
     "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.4.0",
     "typescript": "^5.9.2"
   },
   "optionalDependencies": {
