--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
   },
   "optionalDependencies": {
     "@esbuild/linux-x64": "^0.25.5",
-    "@rollup/rollup-linux-x64-gnu": "^4.41.1"
+    "@rollup/rollup-linux-x64-gnu": "^4.41.1",
+    "@rollup/rollup-darwin-x64": "^4.52.3"
   }
 }
