--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "@radix-ui/themes": "^3.2.1",
     "@react-spring/web": "^9.7.5",
     "@recogito/annotorious-supabase": "1.3.2",
-    "@recogito/pdf-annotator": "^1.3.0",
-    "@recogito/react-pdf-annotator": "^1.3.0",
+    "@recogito/pdf-annotator": "1.2.0",
+    "@recogito/react-pdf-annotator": "1.2.0",
     "@recogito/react-text-annotator": "^3.3.3",
     "@recogito/studio-sdk": "^0.7.1",
     "@recogito/text-annotator": "^3.3.3",
