--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "dependencies": {
     "@allmaps/iiif-parser": "^1.0.0-beta.45",
-    "@annotorious/annotorious": "^3.7.11",
-    "@annotorious/react": "^3.7.11",
+    "@annotorious/annotorious": "^3.7.12",
+    "@annotorious/react": "^3.7.12",
     "@astrojs/netlify": "^6.5.11",
     "@astrojs/node": "^9.4.4",
     "@astrojs/react": "^4.4.0",
@@ -44,12 +44,12 @@
     "@radix-ui/themes": "^3.2.1",
     "@react-spring/web": "^9.7.5",
     "@recogito/annotorious-supabase": "1.3.2",
-    "@recogito/pdf-annotator": "1.2.0",
-    "@recogito/react-pdf-annotator": "1.2.0",
-    "@recogito/react-text-annotator": "^3.3.3",
+    "@recogito/pdf-annotator": "^1.5.1",
+    "@recogito/react-pdf-annotator": "^1.5.1",
+    "@recogito/react-text-annotator": "^3.4.3",
     "@recogito/studio-sdk": "^0.7.1",
-    "@recogito/text-annotator": "^3.3.3",
-    "@recogito/text-annotator-tei": "^3.3.3",
+    "@recogito/text-annotator": "^3.4.3",
+    "@recogito/text-annotator-tei": "^3.4.3",
     "@supabase/ssr": "0.7.0",
     "@supabase/supabase-js": "^2.58.0",
     "@table-library/react-table-library": "^4.1.15",
@@ -67,7 +67,7 @@
     "formik": "2.4.6",
     "linkedom": "0.18.12",
     "moment": "^2.30.1",
-    "nanoid": "^5.1.5",
+    "nanoid": "^5.1.6",
     "nodemailer": "^7.0.6",
     "openseadragon": "5.0.1",
     "papaparse": "5.5.3",
