--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "nodemailer": "^7.0.6",
     "openseadragon": "5.0.1",
     "papaparse": "5.5.3",
+    "pdf-lib": "^1.17.1",
     "quill": "2.0.3",
     "quill-delta-to-html": "^0.12.1",
     "react": "^18.3.1",
@@ -105,7 +106,7 @@
   },
   "optionalDependencies": {
     "@esbuild/linux-x64": "^0.25.5",
-    "@rollup/rollup-linux-x64-gnu": "^4.41.1",
-    "@rollup/rollup-darwin-x64": "^4.52.3"
+    "@rollup/rollup-darwin-x64": "^4.52.3",
+    "@rollup/rollup-linux-x64-gnu": "^4.41.1"
   }
 }
