--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "date-fns": "^4.1.0",
     "formik": "2.4.6",
     "i18next": "^25.6.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "i18next-fs-backend": "^2.6.0",
     "i18next-http-backend": "^3.0.2",
     "linkedom": "0.18.12",
