--- a/package.json
+++ b/package.json
@@ -55,9 +55,11 @@
     "@supabase/ssr": "0.7.0",
     "@supabase/supabase-js": "^2.58.0",
     "@table-library/react-table-library": "^4.1.15",
+    "@trigger.dev/sdk": "4.1.1",
     "@uppy/core": "5.0.2",
     "@uppy/xhr-upload": "5.0.1",
     "accept-language-parser": "^1.5.0",
+    "adm-zip": "^0.5.16",
     "annotpdf": "^1.0.15",
     "astro": "^5.14.1",
     "classnames": "^2.5.1",
@@ -90,7 +92,9 @@
     "@astrojs/ts-plugin": "^1.10.4",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.36.0",
+    "@trigger.dev/build": "4.1.1",
     "@types/accept-language-parser": "^1.5.8",
+    "@types/adm-zip": "^0.5.7",
     "@types/crypto-js": "4.2.2",
     "@types/nodemailer": "^7.0.2",
     "@types/openseadragon": "4.1.0",
