--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "extends": "astro/tsconfigs/strict",
-  "include": [".astro/types.d.ts", "**/*"],
+  "include": [
+    ".astro/types.d.ts",
+    "**/*",
+    "trigger.config.ts"
+  ],
   "exclude": ["dist"],
   "compilerOptions": {
     "baseUrl": ".",
@@ -16,6 +20,7 @@
       "@layouts/*": ["src/layouts/*"],
       "@plugins": ["src/plugins"],
       "@themes/*": ["src/themes/*"],
+      "@trigger/*": ["src/trigger/*"],
       "@util/*": ["src/util/*"]
     },
     "resolveJsonModule": true,
