--- a/package.json
+++ b/package.json
@@ -48,10 +48,11 @@
     "@recogito/annotorious-supabase": "1.3.2",
     "@recogito/pdf-annotator": "^1.6.0",
     "@recogito/react-pdf-annotator": "^1.6.0",
-    "@recogito/react-text-annotator": "^3.4.3",
+    "@recogito/react-text-annotator": "^4.0.0-beta",
     "@recogito/studio-sdk": "^0.7.1",
-    "@recogito/text-annotator": "^3.4.3",
-    "@recogito/text-annotator-tei": "^3.4.3",
+    "@recogito/text-annotator": "^4.0.0-beta",
+    "@recogito/text-annotator-plugin-awareness": "file:../text-annotator/plugins/awareness",
+    "@recogito/text-annotator-tei": "^4.0.0-beta",
     "@supabase/ssr": "0.7.0",
     "@supabase/supabase-js": "^2.58.0",
     "@table-library/react-table-library": "^4.1.15",
